objects/tffa__ReferralCode__c.object
<CustomObject>
    <description>A referral code is a unique code that is assigned to the participants (referrers) of a referral program. The code could be a random set of alphanumeric characters, or even complete words containing the name of the referrer. During a referral program, a referrer shares their referral code with friends, family and colleagues (referees) via email, sms, social, etc. The referee then uses the referral code to apply for a product included in the scope of the referral program. In case of agent referrers, the referees mainly include potential customers (prospects) who have walked into a branch or contacted the agent over phone, email, etc. Every referrer is assigned a referral code only once per referral program. The most important function of referral codes is that they are used to identify, track, and measure the impact the referrers create so that you can provide them with the rewards they have earned based on that data.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the referral code is active for consumption. Derived from disabled and referral program active state.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__Program__r.tffa__Active__c = True</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AgentUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denormalized field of Agent.</description>
        <label>Agent User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Referral Codes</relationshipLabel>
        <relationshipName>ReferralCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agent (or banker) holding the referral code.</description>
        <label>Agent</label>
        <referenceTo>tffa__AgentDetail__c</referenceTo>
        <relationshipLabel>Referral Codes</relationshipLabel>
        <relationshipName>ReferralCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCode__c</fullName>
        <description>The unique code of the Brand the referrer (party or agent) is associated with. Derived from party or agent.</description>
        <formula>BLANKVALUE(tffa__Party__r.tffa__BrandCode__c, tffa__Agent__r.tffa__BrandCode__c)</formula>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Campaign__c</fullName>
        <description>The individual campaign name, slogan, promo code associated with the referral program. Derived from referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>The unique code of the referral code entity. During a referral program, a referrer shares this code (or link containing the code) with friends, family and colleagues (referees) via email, sms, social, etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of the referral code independent of referral program.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Exhausted__c</fullName>
        <description>Indicates whether the number of referrals submitted has exceeded the maximum limit.</description>
        <formula>tffa__MaxNumberOfReferrals__c&gt;0 &amp;&amp; tffa__NumberOfReferrals__c &gt;= tffa__MaxNumberOfReferrals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exhausted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ExternalPartyId__c</fullName>
        <description>Id of Party in an external system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRelatedToCurrentUser__c</fullName>
        <description>Indicates whether the referral code is related to the current (contextual) User.</description>
        <formula>tffa__Agent__r.tffa__User__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Related to Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LastRemindedOn__c</fullName>
        <description>Date and time of last reminder sent to the referrer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last reminded on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__LastSyncedOn__c</fullName>
        <description>The date and time of last synchronization of the referral code (with referral records).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last synced on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__MaxNumberOfReferrals__c</fullName>
        <description>Maximum number of referrals that can be submitted using the referral code. Configured in referral program.</description>
        <formula>tffa__Program__r.tffa__MaxNumberOfReferralsPerCode__c</formula>
        <inlineHelpText>Maximum number of referrals that can be submitted using the referral code. Configured in referral program.</inlineHelpText>
        <label>Maximum number of Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfConvertedReferrals__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of referrals converted out of submitted ones using the referral code.</description>
        <label>Number of Converted Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfDeclinedReferrals__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of referrals declined out of submitted ones using the referral code.</description>
        <label>Number of Declined Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfOpenReferrals__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of open (not yet acted upon) referrals submitted using the referral code.</description>
        <label>Number of Open Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfReferralsRequiredForNextReward__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of referrals required for earning next reward. Tracks remaining required.</description>
        <label>Referrals required for next reward</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfReferralsRewarded__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of (converted) referrals rewarded.</description>
        <label>Number of referrals rewarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfReferrals__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of referrals submitted using the referral code.</description>
        <label>Number of Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfReferredVisitors__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tracks the number of visitors who were referred directly or indirectly by the referrer.</description>
        <label>Referred Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfRewardsEarned__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of rewards earned so far.</description>
        <label>Number of rewards earned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>Referrers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OutOfSync__c</fullName>
        <description>Indicates if the referral code requires synchronization (with referral records).</description>
        <formula>NOT(ISNULL(tffa__SyncPendingOn__c)) &amp;&amp; (ISNULL(tffa__LastSyncedOn__c) || tffa__SyncPendingOn__c &gt; tffa__LastSyncedOn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person holding the referral code.</description>
        <label>Party</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Party must be an individual</errorMessage>
            <filterItems>
                <field>tffa__Party__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Individual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Referral Codes</relationshipLabel>
        <relationshipName>ReferralCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ProgramCode__c</fullName>
        <description>The unique code of the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Program__c</fullName>
        <description>The parent referral program.</description>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Referral program is not active</errorMessage>
            <filterItems>
                <field>tffa__ReferralProgram__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__ReferralProgram__c</referenceTo>
        <relationshipLabel>Referral Codes</relationshipLabel>
        <relationshipName>ReferralCodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__QRCodeUrl__c</fullName>
        <description>URL to access QR code that can be scanned to get the referral url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QR Code Url</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerEmail__c</fullName>
        <description>Referrer email. Derived from party/agent email.</description>
        <formula>BLANKVALUE(tffa__Party__r.tffa__PrimaryEmail__c, tffa__Agent__r.tffa__UserEmail__c)</formula>
        <label>Referrer email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerName__c</fullName>
        <description>Referrer name. Derived from party/agent name.</description>
        <formula>BLANKVALUE(tffa__Party__r.Name, tffa__Agent__r.Name)</formula>
        <label>Referrer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReminderCount__c</fullName>
        <description>Captures count of reminder emails sent to referrer.</description>
        <label>Reminder count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ReminderDate__c</fullName>
        <description>Captures next date on which reminder email will be sent to referrer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reminder date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ReminderSchedule__c</fullName>
        <description>Schedule (frequency in days) for reminder emails sent to referrer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Derived from Referral program</inlineHelpText>
        <label>Reminder schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ShareLinkText__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the referral. Used as message text when sharing the referral link using native sharing mechanisms like whatsapp, facebook, twitter, etc. Derived from referral program.</description>
        <formula>tffa__Program__r.tffa__ShareLinkText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share link text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ShareLinkTitle__c</fullName>
        <description>Message title used when sharing the referral link using native sharing mechanisms like whatsapp, facebook, twitter, etc. Derived from referral program.</description>
        <formula>tffa__Program__r.tffa__ShareLinkTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share link title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ShareLinks__c</fullName>
        <description>Key value pairs of share links. Meant to be transient and generated runtime.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Share links</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__SharingOptions__c</fullName>
        <defaultValue>&quot;DIRECT&quot;</defaultValue>
        <description>The different ways referrers can share their referral links with their friends and family under the referral program. Derived from referral program.</description>
        <label>Sharing options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ReferralSharingOption</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SyncPendingOn__c</fullName>
        <description>The date and time when the referral code was marked pending for synchronization (with referral records).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sync pending on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__TotalRewardCreditsEarned__c</fullName>
        <description>Sum of reward credits earned so far.</description>
        <label>Total reward credits earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalRewardPointsEarned__c</fullName>
        <description>Sum of reward points earned so far.</description>
        <label>Total reward points earned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__UnsubscribeUrl__c</fullName>
        <description>A link for the referrer to unsubscribe themself from reminder emails.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unsubscribe url</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Url__c</fullName>
        <description>Referral link containing the referral code. Usually points to sales application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Url</label>
        <type>Url</type>
    </fields>
    <label>Referral Code</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__MyReferralCodes</fullName>
        <columns>NAME</columns>
        <columns>tffa__Code__c</columns>
        <columns>tffa__Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__IsRelatedToCurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Referral Codes</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>tffa__MaxNumberOfReferrals</fullName>
        <active>true</active>
        <description>NumberOfReferrals cannot exceed MaxNumberOfReferrals</description>
        <errorConditionFormula>NOT(ISNULL(tffa__MaxNumberOfReferrals__c)) &amp;&amp; tffa__NumberOfReferrals__c &gt; tffa__MaxNumberOfReferrals__c</errorConditionFormula>
        <errorMessage>Number of referral exceeds the maximum limit set in the referral program</errorMessage>
    </validationRules>
</CustomObject>